lab1/Test/L1-A-7-91.output
Error Type A at Line 20
Error Type A at Line 34
