lab1/Test/L1-A-7-91.cmm
struct ck vBt99FaPrDkyes82ompE ( int GZEGjMkKY5ozs8d5DsBl 
  ) {
  if ( IDoWQLzVRQGoFT8oyn )   while ( Hj1uyGYm_KYVC1gLl 
    ) {
    struct UL0rwNS zWxYiuSi ;
{
      struct BoCTC bVdzwl_evmnjQVy4_mWN ;
      int gTi ;
      int Qci5Rcse16 ;
      int OwnaVr ;
      int cwovokyx ;
      int I9gjOo6hqTefkzFXVru ;
      if ( _N85uOW7MF8RXfyEXn )       dBc ;

      if ( NPSkojbGD_XiMAFMm )       XuBU ;
else       e9ibW0wPIS9IlbmhB ;

    }    if ( kGjKPVEbspOd_6KpdV )     yIEpOy6XWF45mCY 
      ;
else     if ( axAP8w @)     while ( R8E294o2vPT9k25tDI 
      )     brOhnq ;



    if ( cDCxOKKLA )     j2oIKVdajQZC ;
else     if ( H9HEnW3CTyzKd )     return XZqKI ;


  }
else   Kkv ;

}
struct uUombH6SZgNjrNVkNSm {
  float xDZy = e5Vi %= GO || I && JtDKPRc5gm5Zm4m2SSk 
    - gzqqO / _GrishQRCH [ SIyu79ZsFXmhN3qHWYe = mYR = 
    nqaP9XYpqc > sSxslkHBTL + Aqcrna5JAnq7Dho ( qOPsOAGVg 
    < ( AX = DsQyBNrBlEaGc && ( uUXF0P3ll + j0xLTizsvf 
    / ( _Ctc0loI_692L = xXTDUXBeV3 + - EPurz_WRQJD99F 
    ( u7WNjDTsq , rdKs2LuzfT97rPKE ) ) ) * HjnD >= JD0P04SijzH 
    + ZE2RR6q02wgygfrrUBj == RAP9es7PQ . sNP6MEHcGbXtg 
    * ! WVXsgJO * qhWjUWSaIef6eAjQ <= 1843585707 ) . z_LypIqOjNEL4G4l0RhI 
    ) ] != - 2099694923.1550366649 * - ! FUXv ( ) , TExyDpnr 
    [ 1839958086 ] ;
}jAcFvL8s 
;
int ;
struct {
};
int ;
int ;
int qktMj2DBAQr ( ) {
}
int ;
int Irrc2H772vDDpYzIa5 ( int nJ0UAxRuR3zykxFQ52c , 
  int QphUt8gILAxABM6H ) {
}
int ;
int VYCyhlj1tnM , Gf5 

;
int ;
int ;
int ;
